# harmonic-scales

./: .gitignore  .pre-commit-config.yaml  3-Group Ensemble.ipynb  All Scales Graph.ipynb  Bjorklund.ipynb  Chords and Scales.ipynb  Diatonic Composition Tools (2024).ipynb  Different Approach.ipynb  Interval Limited Scale Generator.ipynb  Ottoman Court Music.ipynb  Untitled.ipynb  Untitled1.ipynb  Valid Scale Generator.ipynb  explore_graph.ipynb  harmony.py  pyproject.toml
