[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
networkx = "^3.1"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
